# ai-engineering-practice

./: .gitignore  main.py  pyproject.toml
Phase 1/: CLAUDE.md  phase1_tutor.md
Phase 1/Week 1/: markdown_notes_indexer.ipynb
Phase 1/Week 1/sample_notes/: embeddings_basics.md  rag_overview.md  vector_databases.md
Phase 1/Week 2/: llm_logs.db  llm_wrapper.py  main.py
Phase 1/Week 3/: search.py
Phase 1/Week 3/qdrant_storage/: raft_state.json
Phase 1/Week 3/qdrant_storage/collections/gdpr/0/: newest_clocks.json
Phase 1/Week 3/qdrant_storage/collections/gdpr/0/segments/407c14fa-52ce-4d5a-81bb-1a3c25db276a/: mutable_id_tracker.mappings  mutable_id_tracker.versions
Phase 1/Week 3/qdrant_storage/collections/gdpr/0/segments/93edca95-cd12-45b6-b9db-84717b0ef20e/: mutable_id_tracker.mappings  mutable_id_tracker.versions
Phase 1/Week 3/qdrant_storage/collections/gdpr/0/segments/a7ea8e31-c2e3-4d0c-a6fd-566e97ebcdaa/: mutable_id_tracker.mappings  mutable_id_tracker.versions
Phase 1/Week 3/qdrant_storage/collections/gdpr/0/segments/bd915afe-34a4-4502-9016-a7772aa4c5b2/: mutable_id_tracker.mappings  mutable_id_tracker.versions
Phase 1/Week 3/qdrant_storage/collections/gdpr/0/segments/eeb894e7-97db-4067-8774-e0d9330c7c5e/: mutable_id_tracker.mappings  mutable_id_tracker.versions
Phase 1/Week 3/qdrant_storage/collections/my-docs/0/: newest_clocks.json
Phase 1/Week 3/qdrant_storage/collections/words/0/: newest_clocks.json  replica_state.json
Phase 1/Week 4/: gdpr.txt  rag.ipynb
Phase 2.5/: phase_system_design_tutor.md
