[project]
name = "ai-engineering-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.102.0",
    "fastapi[standard]>=0.136.1",
    "ipykernel>=7.2.0",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
]
