[project]
name = "ai-engineering-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.102.0",
    "fastapi[standard]>=0.136.1",
    "ipykernel>=7.2.0",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.36.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.0",
    "sqlmodel>=0.0.38",
    "typer>=0.25.1",
]
